small fixes to layout

--- a/public/html/participant-registered.html
+++ b/public/html/participant-registered.html
@@ -18,7 +18,7 @@
 		
 		
 		<div class="container">
-			<h2 class="text-orange text-large">The Beauty of Data</h2>
+			<div class="text-orange text-large">The Beauty of Data</div>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 			<br><br>
@@ -37,7 +37,7 @@
 				</form>
 
 
-				<div class="container"><img src="../photos/logo3.png"> </div>
+				<div class="container logo-bottom-bouvet"><img src="../photos/logo1.png"> </div>
 			</div>
 
 		</body>
