--- a/public/html/register-participant.html
+++ b/public/html/register-participant.html
@@ -22,21 +22,21 @@
 	</head>
 	<body ng-app>
 		
-		
+		<div class="text-large"> &nbsp <img src="../photos/logo3.png"> </div>
 		<div class="container">
-			<h2 class="text-orange text-large">The Beauty of Data</h2>
+			<div class="text-orange text-large">The Beauty of Data</div>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
-			<br><br><br><br>
+			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			
 			<div class="text-white">
 				<h2> Dine svar er nå registrert.</h2>
-				<br><br><br>
+				<br>
 				<p> Hvis du vil være med i trekningen av premien, kan du fylle
 					ut informasjonen under. </p>
 				<p> Bouvet vil ikke bruke informasjonen til noe annet formål enn selve trekningen.</p> 
 				<p>Data vil bli slettet etter trekningen.</p>
 				</div>
-				<br><br>
+				<br>
 
 
 					<form action="/participants" method="post" class="form-horizontal" name="userForm" role="form" novalidate>
@@ -66,8 +66,6 @@
 					
 
 				</div>
-				<div class="container logo-bottom-bouvet"> bouvet </div>
-
 
 			</body>
 			</html>
