--- a/public/html/start.html
+++ b/public/html/start.html
@@ -16,18 +16,16 @@
 
 		<div class="container">
 			<body>
-				<br>
-				<h2 class="text-orange text-large">The Beauty of Data</h2>
+				<div class="text-orange text-large top-pad">The Beauty of Data</div>
 				
 				<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 			
 				<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
-		
+				
 				<form action="/public/html/register-answer.html" method="get">
 					<input class="btn btn-def-bouvet btn-start" type="submit" value="Start">
 				</form>
-				<div class="logo-bottom-bouvet"> <img src="../photos/logo3.png"> </div> 
-
+				<div class="container logo-bottom-bouvet"> <img src="../photos/logo1.png"> </div> 
 			</body>
 		</div>
 		
