--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/bootstrapModify.css">
 	<script src="../js/app.js"></script>
 	<script src="../js/controllers.js"></script>
+	<script src="../js/directives.js"></script>
 	<script src="../external_libs/angular-route.min.js"></script>
 	<script src="../external_libs/jquery.min.js"></script>
 	<script src="../external_libs/bootstrap/js/bootstrap.js"></script>
