refactored to angular
refactored to angular using controllers, ng-submit, routeprovider etc.

--- a/public/html/partial-register-participant.html
+++ b/public/html/partial-register-participant.html
@@ -37,7 +37,7 @@
 
 				<div>
 					<a href="#/partial-start" class="btn btn-escape text-small">
-						Nei takk, tilbake til hovedsiden"
+						Nei takk, tilbake til hovedsiden
 					</a>
 				</div>
 					
