--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/directives.js"></script>
+	<script src="js/services.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="external_libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrapModify.css">
