Added new filter for which answers to display, not finished using it in the controller

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<script src="js/controllers.js"></script>
 	<script src="js/directives.js"></script>
 	<script src="js/services.js"></script>
+	<script src="js/filters.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="external_libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrapModify.css">
