--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="bodApp">
 <head>
+	<script src="external_libs/jquery/jquery.min.js"></script>
 	<script src="external_libs/angular/angular.min.js"></script>
 	<script src="external_libs/angular-route/angular-route.min.js"></script>
-	<script src="external_libs/jquery/jquery.min.js"></script>
+	<script src="external_libs/angular-animate/angular-animate.min.js"></script>
 	<script src="external_libs/bootstrap/dist/js/bootstrap.js"></script>
 
 	<script src="js/app.js"></script>
@@ -14,6 +15,7 @@
 
 	<link rel="stylesheet" type="text/css" href="external_libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrapModify.css">
+	<link rel="stylesheet" type="text/css" href="css/animations.css">
 	
 	<title>The Beauty of Data</title>
 </head>
