Added animations for changing of views

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	<title>The Beauty of Data</title>
 </head>
 <body>
-	<div ng-view></div>
+	<div ng-view class="view-frame"></div>
 </body>
 </html>
 
