cleaned up the html files a bit: indentation, a few comments and readability

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!-- Main file, uses the partial files through the use of ng-view and the angular router defined in app.js -->
 <!DOCTYPE html>
 <html ng-app="bodApp">
 <head>
@@ -21,4 +22,3 @@
 	<div ng-view></div>
 </body>
 </html>
-
